--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.11"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
