--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
