--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express-graphql": "^0.12.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
