--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.6",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
