--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "npm run build && nodemon src/dist/index.js",
+    "dev": "npm run build && nodemon dist/index.js",
     "dev-ts": "nodemon src/index.ts",
     "build": "tsc --build"
   },
