--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1066.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -20,7 +21,9 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "jsonwebtoken": "^9.0.0",
+    "minio": "^7.0.32",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
@@ -33,7 +36,8 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.6",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/multer": "^1.4.7",
+    "@types/minio": "^7.0.15",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
