--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-validator": "^6.14.3",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "k6": "^0.0.0",
     "minio": "^7.0.32",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
@@ -36,6 +39,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.6",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/k6": "^0.42.0",
     "@types/minio": "^7.0.15",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
