--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "redis": "^4.6.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.11"
