--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DB_PASSWORD = YOURPASSWORD
 DB_NAME = YOURDB
 DB_PORT = YOURPORT
 DB_HOST = YOURLOCAL
+DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
