--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "aws-sdk": "^2.1066.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
@@ -45,6 +46,7 @@
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
+    "prisma": "^4.9.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
