--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.2.6",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/k6": "^0.42.0",
