--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose ./src",
     "dev": "npm run build && nodemon dist/index.js",
     "dev-ts": "nodemon src/index.ts",
     "build": "tsc --build"
@@ -30,7 +30,6 @@
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "redis": "^4.6.3",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.11"
@@ -41,14 +40,18 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.15",
     "@types/helmet": "^4.0.0",
-    "@types/jest": "^29.2.6",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/k6": "^0.42.0",
     "@types/minio": "^7.0.15",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
-    "jest": "^29.3.1",
+    "@types/redis": "^4.0.11",
+    "@types/redis-mock": "^0.17.1",
+    "jest": "^29.4.1",
     "prisma": "^4.9.0",
+    "redis": "^4.6.4",
+    "redis-mock": "^0.56.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
