--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest --verbose ./src",
     "dev": "npm run build && nodemon dist/index.js",
     "dev-ts": "nodemon src/index.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test-db": "nodemon src/database/orm.ts"
   },
   "keywords": [],
   "author": "",
