--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
@@ -46,6 +47,7 @@
     "@types/minio": "^7.0.15",
     "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/redis": "^4.0.11",
     "@types/redis-mock": "^0.17.1",
     "jest": "^29.4.1",
